Mon Jun 13 13:03:08 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* hash.c (ruby_setenv): fixed SEGV. [ruby-dev:26186]

Mon Jun 13 01:54:20 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (sigexit): call rb_thread_signal_exit() instead of
	  rb_exit().  [ruby-dev:26347]

	* eval.c (rb_thread_signal_exit): a new function to exit on main
	  thread.

	* eval.c (rb_thread_switch): exit status should be retrieved from
	  ruby_errinfo.

	* eval.c (rb_f_exit): ensure exit(0) should call
	  exit(EXIT_SUCCESS).

Mon Jun 13 01:20:02 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (rb_gc_mark_threads): curr_thread may not be part of the
	  thread list.  [ruby-dev:26312]

Sat Jun 11 22:34:44 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y: missing arg_paren event.  This patch is contributed by
	  Mitchell N Charity.

Fri Jun 10 23:55:17 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (unknown_node): show more information.  [ruby-dev:26196]

Fri Jun 10 23:35:34 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* missing/mkdir.c: remove. [ruby-core:05177]

Fri Jun 10 22:54:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing.h: fd_set stuffs need sys/types.h.  fixed: [ruby-core:05179]

Thu Jun  9 23:58:12 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/Win32API/Win32API.c (Win32API_Call): disable global
	  optimization. fixed: [ruby-core:05143]

Thu Jun  9 23:35:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_inject): default the result value to Qundef to use
	  first element as initial value if not given.

Thu Jun  9 19:55:41 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (ruby_longjmp): new macro to call longjmp, setcontext, etc.
	  (ruby_setjmp): new macro to call setjmp, getcontext, etc.
	  (ruby_setjmp): call setjmp before getcontext to avoid IA64 register
	  stack problem.
	  [ruby-talk:144939]

	* gc.c (Init_stack): remove IA64_MAGIC_STACK_LIMIT.

Thu Jun  9 18:24:16 2005  Tanaka Akira  <akr@m17n.org>
