@@ -1,3 +1,11 @@
+Tue Jun 14 02:02:43 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/tkutil/tkutil.c: add TkUtil::CallbackSubst.subst_arg(m, ...)
+	  & _define_attribute_aliases(hash) to get substitution-argument from
+	  attributes (e.g. subst_arg(:x,:y,:num,:button) --> "%x %y %b %b ").
+
+	* ext/tk/lib/tk/event.rb: use _define_attribute_aliases().
+
 Mon Jun 13 13:03:08 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
 
 	* hash.c (ruby_setenv): fixed SEGV. [ruby-dev:26186]
